05/04-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-color
spec:
  replicas: 3
  selector:
    matchLabels:
      app: red-color
  template:
    metadata:
      labels:
        app: red-color
        toswitch: switch_on
    spec:
      containers:
      - name: red-color
        image: sbeliakou/color
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
          - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-color
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-color
  template:
    metadata:
      labels:
        app: green-color
        toswitch: switch_on
    spec:
      containers:
      - name: green-color
        image: sbeliakou/color
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
          - containerPort: 80
       
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-color
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yellow-color
  template:
    metadata:
      labels:
        app: yellow-color
        toswitch: switch_on
    spec:
      containers:
      - name: yellow-color
        image: sbeliakou/color
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
          - containerPort: 80
