05/09-depl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-default-backend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sorry-page
  namespace: ingress-default-backend
spec:
  selector:
    matchLabels:
      app: sorry-page
  template:
    metadata:
      labels:
        app: sorry-page
    spec:
      containers:
      - name: sorry-page
        image: sbeliakou/http-sorry-page
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
