05/02-01-svc-aqua.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-svc
spec:
  selector:
    app: aqua
  ports:
  - port: 80
    targetPort: 80
