05/02-02-svc-maroon.yaml
apiVersion: v1
kind: Service
metadata:
  name: maroon-svc
spec:
  selector:
    app: maroon
  ports:
  - port: 80
    targetPort: 80
