05/02-03-svc-olive.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-svc
spec:
  selector:
    app: olive
  ports:
  - port: 80
    targetPort: 80
