05/04-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  selector:
    app: red-color
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green-color
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: yellow-svc
spec:
  selector:
    app: yellow-color
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: switch
spec:
  selector:
    toswitch: switch_on
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80

---
