05/09-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorry-page-service
  namespace: ingress-default-backend
spec:
  selector:
    app: sorry-page
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
