05/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
      name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aqua.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
  - host: maroon.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: maroon-svc
            port:
              number: 80
  - host: olive.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: olive-svc
            port:
              number: 80
