05/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors-ingress
  labels:
      name: colors-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: colors.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/aqua"
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/maroon"
        backend:
          service:
            name: maroon-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: olive-svc
            port:
              number: 80
