05/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lights-ingress
  labels:
      name: lights-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lights.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/red"
        backend:
          service:
            name: red-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: green-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/yellow"
        backend:
          service:
            name: yellow-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: switch
            port:
              number: 8080
